@@ -1,6 +1,8 @@
 #include "SubProcess.h"
 #include "FileDescriptorHandler.h"
 
+#include "EventFilter/Utilities/interface/TriggerReportDef.h"
+
 namespace evf{
 
   SubProcess &SubProcess::operator=(const SubProcess &b)
@@ -16,6 +18,7 @@ namespace evf{
     save_scalers_ = b.save_scalers_;
     restart_countdown_=b.restart_countdown_;
     reported_inconsistent_=b.reported_inconsistent_;
+    postponed_trigger_updates_ = b.postponed_trigger_updates_;
     return *this;
   }
 
@@ -64,6 +67,7 @@ namespace evf{
     retval = fork();
     reported_inconsistent_ = false;
     nfound_invalid_ = 0;
+    postponed_trigger_updates_.clear();
     if(retval>0)
       {
 	pid_ = retval;
@@ -79,5 +83,23 @@ namespace evf{
       }
     return retval;
   }
+  void SubProcess::add_postponed_trigger_update(MsgBuf &b)
+  {
+    postponed_trigger_updates_.push_back(b);
+  }
+  bool SubProcess::check_postponed_trigger_update(MsgBuf &b, unsigned int ls)
+  {
+    for(std::vector<MsgBuf>::iterator i = postponed_trigger_updates_.begin(); i != postponed_trigger_updates_.end(); i++)
+      {
+	TriggerReportStatic *trp = (TriggerReportStatic *)((*i)->mtext);
+	 if(trp->lumiSection == ls){
+	   b = (*i);
+	   postponed_trigger_updates_.erase(i);
+	   return true;
+	 }
+      }
+    return false;
+  }
+
 
 }
