@@ -5,6 +5,7 @@
 #include "EventFilter/Utilities/interface/MasterQueue.h"
 #include "EventFilter/Utilities/interface/SlaveQueue.h"
 #include <string>
+#include <vector>
 
 #include <iostream>
 #include <boost/shared_ptr.hpp>
@@ -57,6 +58,7 @@ namespace evf{
       , restart_count_(b.restart_count_)
       , reported_inconsistent_(b.reported_inconsistent_)
       , nfound_invalid_(b.nfound_invalid_)
+      , postponed_trigger_updates_(b.postponed_trigger_updates_)
       {
       }
     SubProcess &operator=(const SubProcess &b);
@@ -133,6 +135,8 @@ namespace evf{
     int get_save_nba() const {return save_nba_;}
     void found_invalid() {nfound_invalid_++;}
     unsigned int nfound_invalid() const { return nfound_invalid_;}
+    void add_postponed_trigger_update(MsgBuf &);
+    bool check_postponed_trigger_update(MsgBuf &, unsigned int);
     static const unsigned int monitor_queue_offset_ = 200;
 
   private:
@@ -154,6 +158,8 @@ namespace evf{
     unsigned int save_scalers_;
     bool reported_inconsistent_;
     unsigned int nfound_invalid_;
+
+    std::vector<MsgBuf> postponed_trigger_updates_;
   };
 
 
